Smaller unit test dataset